--- a/.github/workflows/master-ugr-ci-calculator-lib.yml
+++ b/.github/workflows/master-ugr-ci-calculator-lib.yml
@@ -21,34 +21,19 @@ jobs:
   security:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v4
-        # Checkout the repository      
-
-      - name: Create reports directory
-        run: mkdir -p ./security-reports
-
-      - name: Run Snyk Test
-        run: snyk test --sarif-file-output=./security-reports/snyk.sarif --all-projects --project-base-path=master-ugr.calculator.lib
+      - uses: actions/checkout@master
+      - name: Run Snyk to check for vulnerabilities
+        uses: snyk/actions/node@master
+        continue-on-error: true # To make sure that SARIF upload gets called
         env:
           SNYK_TOKEN: ${{ secrets.SNYK_TOKEN }}
-
-      - name: List files in workspace
-        run: ls -la
-
-      - name: List files in security reports directory
-        run: ls -la ./security-reports
-
-      - name: Verify SARIF file exists
-        run: |
-          if [ ! -f ./security-reports/snyk.sarif ]; then
-            echo "Error: SARIF file not found!"
-            exit 1
-          fi
-
-      - name: Upload SARIF results
+        with:
+          command: test
+          args: --sarif-file-output=snyk.sarif --all-projects
+      - name: Upload result to GitHub Code Scanning
         uses: github/codeql-action/upload-sarif@v3
         with:
-          sarif_file: ./security-reports/snyk.sarif
+          sarif_file: snyk.sarif
 
   build:
     runs-on: ubuntu-latest
